--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello world!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
 </head>
 <body>
-    <p>
-        Hello world!
-    </p>
-    <p>
-        PS. Vittory
-    </p>
+    <h2 align="center">Книги жанра "Классика"</h2>
+
+    <table border="2" align="center" width="60%" cellspacing="0" cellpadding="3" bgcolor="Moccasin"
+        <tr>
+            <td>Джейн Эйр</td>
+            <td>Шарлота Бронте</td>
+        </tr>
+        <tr>
+            <td>Грозовой перевал</td>
+            <td>Емили Бронте</td>
+        </tr>
+        <tr>
+            <td>Три товарища</td>
+            <td>Эрих Мария Ремарк</td>
+        </tr>
+        <tr>
+            <td>Триумфальная арка</td>
+            <td>Эрих Мария Ремарк</td>
+        </tr>
+    </table>
 </body>
 </html>
