--- a/recept.html
+++ b/recept.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>recept</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+      </style>
 </head>
 <body>
     <div style="background-image: url(cakes.webp);background-size:cover;height: 450px;padding-top:20px;">
@@ -13,7 +16,7 @@
             здоровья,<br>но при этом остаются влажными и воздушными.
         Идеально <br>подходит для быстрого завтрака или быстрого перекуса! </p>
     </div>
-    <p style="font-size:30px; color:rgb(49, 49, 44)">Ингидиенты(на 6 порций)</p>
+    <p style="font-size:30px; color:rgb(49, 49, 44)">Ингридиенты(на 6 порций)</p>
     <ul type="square" style="font-size:23px">
       <li>60 г белая цельнозерновая мука</li>
       <li>40 г мука из зеленого банана</li>
@@ -45,6 +48,10 @@
              или пока вставленная зубочистка не будет выходить чистой.</li>
         <li>Дайте маффинам полностью остыть перед хранением. Наслаждаться!</li>
     </ol>
-    
+<p style="font-size:30px"><a href="https://chloeting.com/" target="_blank"> Рецепт взят</a></p>
+<p><img src="cakes3.webp" height="570px">
+<img src="cakes4.webp"height="570px">
+<img src="cakes2.webp"height="570px">
+</p>
 </body>
 </html>
